--- a/experimental/alpha.scss
+++ b/experimental/alpha.scss
@@ -47,3 +47,15 @@ urgency and seriousness.
 strong {
 }
 /*-------------------------------------*/
+
+/*---------------------------------------
+	Handwriting
+---------------------------------------*/
+.handwriting {
+  font-family: 'Caveat' !important;
+}
+/*-------------------------------------*/
+
+.no-margin {
+  margin: 0;
+}
