--- a/betta-0.0.5.css
+++ b/betta-0.0.5.css
@@ -194,9 +194,9 @@ select {
  * Correct the inability to style clickable types in iOS and Safari.
  */
 button,
-[type=button],
-[type=reset],
-[type=submit] {
+[type='button'],
+[type='reset'],
+[type='submit'] {
   -webkit-appearance: button;
 }
 
@@ -204,9 +204,9 @@ button,
  * Remove the inner border and padding in Firefox.
  */
 button::-moz-focus-inner,
-[type=button]::-moz-focus-inner,
-[type=reset]::-moz-focus-inner,
-[type=submit]::-moz-focus-inner {
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
@@ -215,9 +215,9 @@ button::-moz-focus-inner,
  * Restore the focus styles unset by the previous rule.
  */
 button:-moz-focusring,
-[type=button]:-moz-focusring,
-[type=reset]:-moz-focusring,
-[type=submit]:-moz-focusring {
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -267,8 +267,8 @@ textarea {
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-[type=checkbox],
-[type=radio] {
+[type='checkbox'],
+[type='radio'] {
   box-sizing: border-box;
   /* 1 */
   padding: 0;
@@ -278,8 +278,8 @@ textarea {
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type=number]::-webkit-inner-spin-button,
-[type=number]::-webkit-outer-spin-button {
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -287,7 +287,7 @@ textarea {
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-[type=search] {
+[type='search'] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -297,7 +297,7 @@ textarea {
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-[type=search]::-webkit-search-decoration {
+[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -614,7 +614,7 @@ img.round {
 }
 @media (max-width: 800px) {
   .betta_image-strip .back,
-.betta_image-strip .forward {
+  .betta_image-strip .forward {
     margin-top: -1rem;
   }
 
@@ -734,7 +734,7 @@ img.round {
 
 @media (max-width: 800px) {
   #betta_menu-button,
-#betta_back-button {
+  #betta_back-button {
     top: auto;
     bottom: 1rem;
     left: calc(50vw - 2rem);
@@ -1008,12 +1008,12 @@ button.dark:active:enabled {
   }
 
   body > .icon-button .material-icons-round,
-.icon-button > .icon {
+  .icon-button > .icon {
     font-size: 2.5rem;
   }
 
   .icon-button .material-icons-round.custom-icon img,
-.icon-button > .icon > img {
+  .icon-button > .icon > img {
     height: 2.5rem;
     width: 2.5rem;
   }
@@ -1049,7 +1049,7 @@ button.icon-button.simple,
 
 @media (hover: hover) {
   button.icon-button.simple:hover,
-.dark button.icon-button.simple:hover {
+  .dark button.icon-button.simple:hover {
     background: none;
     opacity: 1;
   }
@@ -1155,7 +1155,7 @@ between lines
 
 @media (max-width: 600px) {
   .inline-split,
-.inline-ternate {
+  .inline-ternate {
     display: block;
     width: 100%;
   }
@@ -1239,7 +1239,7 @@ between lines
 
 @media (max-width: 800px) {
   #gallery,
-.gallery {
+  .gallery {
     padding-bottom: 0rem;
   }
 
@@ -1250,7 +1250,7 @@ between lines
 }
 @media (max-width: 480px) {
   #gallery,
-.gallery {
+  .gallery {
     padding-bottom: 0.75rem;
   }
 
@@ -1407,20 +1407,20 @@ a.card-double h4 {
 
 @media (hover: hover) {
   a.card:hover h2,
-a.card:hover h3,
-a.card:hover h4,
-a.card-double:hover h2,
-a.card-double:hover h3,
-a.card-double:hover h4 {
+  a.card:hover h3,
+  a.card:hover h4,
+  a.card-double:hover h2,
+  a.card-double:hover h3,
+  a.card-double:hover h4 {
     border-bottom: 3px solid #000000;
   }
 
   .dark a.card:hover h2,
-.dark a.card:hover h3,
-.dark a.card:hover h4,
-.dark a.card-double:hover h2,
-.dark a.card-double:hover h3,
-.dark a.card-double:hover h4 {
+  .dark a.card:hover h3,
+  .dark a.card:hover h4,
+  .dark a.card-double:hover h2,
+  .dark a.card-double:hover h3,
+  .dark a.card-double:hover h4 {
     border-bottom-color: #f5f5f5;
   }
 
@@ -1436,8 +1436,8 @@ a.card-double:hover h4 {
   }
 
   a.card.cover:hover h2,
-a.card.cover:hover h3,
-a.card.cover:hover h4 {
+  a.card.cover:hover h3,
+  a.card.cover:hover h4 {
     bottom: -1rem;
     left: -1rem;
     right: -1rem;
@@ -1457,24 +1457,24 @@ a.card.cover:hover h4 {
   }
 
   a.card h2,
-a.card h3,
-a.card h4 {
+  a.card h3,
+  a.card h4 {
     margin-left: 1rem;
     margin-right: 1rem;
   }
 
   a.card h2,
-a.card h3,
-a.card h4,
-a.card-double h2,
-a.card-double h3,
-a.card-double h4 {
+  a.card h3,
+  a.card h4,
+  a.card-double h2,
+  a.card-double h3,
+  a.card-double h4 {
     margin-top: 1.25rem;
   }
 
   a.card.cover h2,
-a.card.cover h3,
-a.card.cover h4 {
+  a.card.cover h3,
+  a.card.cover h4 {
     font-size: 1rem;
     line-height: 1.6rem;
   }
@@ -1557,7 +1557,7 @@ a.card-double:active {
   }
 
   a.card-double .betta_image,
-a.card-double .content {
+  a.card-double .content {
     height: auto;
     width: 100%;
     display: block;
@@ -1955,7 +1955,7 @@ option,
 input,
 select,
 button {
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 h1,
@@ -2285,7 +2285,7 @@ urgency and seriousness.
 	Handwriting
 ---------------------------------------*/
 .handwriting {
-  font-family: "Caveat" !important;
+  font-family: 'Caveat' !important;
 }
 
 /*-------------------------------------*/
@@ -2360,16 +2360,16 @@ form button {
   vertical-align: middle;
   text-align: left;
 }
-form button[type=submit] {
+form button[type='submit'] {
   margin-top: 1.6rem;
 }
-form .inline-single button[type=submit] {
+form .inline-single button[type='submit'] {
   margin-top: 0.5rem;
 }
 form button.show {
   display: inline-block;
 }
-form button[type=button] .material-icons-round {
+form button[type='button'] .material-icons-round {
   font-size: 1rem;
 }
 form input,
@@ -2384,10 +2384,10 @@ form textarea {
   height: 5rem;
   margin-bottom: 0.5rem;
 }
-form input[type=file] {
+form input[type='file'] {
   display: none;
 }
-form input[type=checkbox] {
+form input[type='checkbox'] {
   width: 2rem;
 }
 form input.hours,
@@ -2454,7 +2454,8 @@ form.login {
   margin: 0 auto;
   text-align: center;
 }
-form.login > button, form.login > input {
+form.login > button,
+form.login > input {
   display: block;
   margin: 0 auto 1rem auto;
 }
@@ -2642,7 +2643,7 @@ form > button.icon-button {
   }
 
   #betta_menu,
-.sidebar {
+  .sidebar {
     display: none;
     padding: 5rem 3rem;
     width: auto;
@@ -2654,7 +2655,7 @@ form > button.icon-button {
   }
 
   #betta_menu.show,
-.sidebar.show {
+  .sidebar.show {
     display: block;
   }
 
@@ -2742,7 +2743,7 @@ form > button.icon-button {
 }
 
 .tooltip > span.tooltip-text::after {
-  content: " ";
+  content: ' ';
   position: absolute;
   left: 50%;
   bottom: 100%;
