--- a/experimental/alpha.scss
+++ b/experimental/alpha.scss
@@ -59,3 +59,11 @@ strong {
 .no-margin {
   margin: 0;
 }
+
+/*---------------------------------------
+	Set element position to relative
+---------------------------------------*/
+.relative {
+  position: relative;
+}
+/*-------------------------------------*/
