--- a/experimental/alpha.scss
+++ b/experimental/alpha.scss
@@ -67,3 +67,13 @@ strong {
   position: relative;
 }
 /*-------------------------------------*/
+
+/*---------------------------------------
+	Hide on mobile screens
+---------------------------------------*/
+@media (max-width: 800px) {
+  .hide-on-mobile {
+    display: none;
+  }
+}
+/*-------------------------------------*/
