--- a/betta-0.0.5.css
+++ b/betta-0.0.5.css
@@ -1525,6 +1525,9 @@ a.card-double .content {
 a.card-double .betta_image {
   background: #f5f5f5;
 }
+a.card-double .betta_image img {
+  object-fit: cover;
+}
 
 .dark a.card-double .betta_image {
   background: #212121;
