Remove outlines on links

--- a/betta-0.0.5.css
+++ b/betta-0.0.5.css
@@ -424,6 +424,12 @@ i {
   vertical-align: top;
 }
 
+a {
+  /* Remove outline from links
+  breaks tab through content highlighting */
+  outline: none;
+}
+
 i,
 img,
 picture,
