--- a/base/_base.scss
+++ b/base/_base.scss
@@ -193,68 +193,55 @@ img.round {
   white-space: nowrap;
   scrollbar-width: 0;
   padding-bottom: 1rem;
-}
 
-.betta_image-strip .back,
-.betta_image-strip .forward {
-  z-index: 99;
-  position: absolute;
-  margin-top: 45vh;
-}
+  .back,
+  .forward {
+    position: absolute;
+    margin-top: 8rem;
+    z-index: 5;
 
-.betta_image-strip .back:disabled,
-.betta_image-strip .forward:disabled {
-  display: none;
-}
-
-.betta_image-strip .back {
-  left: calc(50vw - (55rem / 2) - 1rem);
-  margin-top: 8rem;
-  z-index: 5;
-}
-
-.betta_image-strip .back {
-  left: calc(50vw - (55rem / 2) - 1rem);
-  margin-top: 8rem;
-  z-index: 5;
-}
-
-.betta_image-strip .back.hide,
-.betta_image-strip .forward.hide {
-  display: none;
-}
-
-.betta_image-strip .forward {
-  right: calc(50vw - (55rem / 2) - 1rem);
-  margin-top: 8rem;
-  z-index: 5;
-}
-
-.betta_image-strip .betta_image {
-  display: inline-block;
-  width: calc(50% - 2rem);
-  margin: 1rem;
-}
-
-@media (max-width: 1000px) {
-  .betta_image-strip .back {
-    left: 1rem;
+    &.hide,
+    &.hide,
+    &:disabled,
+    &:disabled {
+      display: none;
+    }
   }
 
-  .betta_image-strip .forward {
-    right: 1rem;
-  }
-}
-
-@media (max-width: 800px) {
-  .betta_image-strip .back,
-  .betta_image-strip .forward {
-    margin-top: -1rem;
+  .back {
+    left: calc(50vw - (55rem / 2) - 1rem);
   }
 
-  .betta_image-strip .betta_image {
-    width: calc(100% - 2rem);
+  .forward {
+    right: calc(50vw - (55rem / 2) - 1rem);
+  }
+
+  .betta_image {
+    display: inline-block;
+    width: calc(50% - 2rem);
     margin: 0 1rem;
+  }
+
+  @media (max-width: 1000px) {
+    .back {
+      left: 1rem;
+    }
+  
+    .forward {
+      right: 1rem;
+    }
+  }
+
+  @media (max-width: 800px) {
+    .back,
+    .forward {
+      margin-top: -2rem;
+    }
+  
+    .betta_image {
+      width: calc(100% - 2rem);
+      margin: 0 1rem;
+    }
   }
 }
 /*-------------------------------------*/
