Moce image strip to own file

--- a/betta.scss
+++ b/betta.scss
@@ -21,6 +21,7 @@ A project by Isak Combrinck & Dahman Ramdani.
 
 @import 'components/form';
 @import 'components/google-maps';
+@import 'components/image-strip';
 @import 'components/menu';
 @import 'components/tooltip';
 
