--- a/betta-0.0.5.css
+++ b/betta-0.0.5.css
@@ -1111,24 +1111,28 @@ between lines
   position: relative;
   margin-top: -5rem;
   z-index: 2;
-  padding: 1rem 2rem;
+  /* Using 1px padding because if you use
+  0 then the padding from text in the box
+  is also removed. */
+  padding: 1px 2rem;
   background: #f5f5f5;
   max-width: 34rem;
+}
+@media (max-width: 800px) {
+  .betta_overlap-top {
+    margin-top: 0;
+    padding: 0 1rem;
+    background: none;
+  }
+}
+.betta_overlap-top h2 {
+  margin-top: 1.75rem;
 }
 
 .dark .betta_overlap-top {
   background: #212121;
 }
 
-@media (max-width: 800px) {
-  .betta_overlap-top {
-    position: relative;
-    margin-top: 0;
-    z-index: 0;
-    padding: 1rem;
-    background: none !important;
-  }
-}
 /*-------------------------------------*/
 /*---------------------------------------
 	Gallery
