Add padding to footer

--- a/betta-0.0.5.css
+++ b/betta-0.0.5.css
@@ -697,6 +697,7 @@ img.round {
 ---------------------------------------*/
 footer {
   box-sizing: border-box;
+  padding-top: 3rem;
   text-align: center;
 }
 @media (min-width: 800px) {
