--- a/base/_base.scss
+++ b/base/_base.scss
@@ -328,6 +328,7 @@ img.round {
 ---------------------------------------*/
 footer {
   box-sizing: border-box;
+  padding-top: 3rem;
   text-align: center;
 
   @media (min-width: 800px) {
