Compile next version

--- a/betta-next.css
+++ b/betta-next.css
@@ -2903,4 +2903,4 @@ header.hero > h1 {
   background: #121212;
 }
 
-/*# sourceMappingURL=betta-0.0.5.css.map */
+/*# sourceMappingURL=betta-next.css.map */
