--- a/betta-next.css
+++ b/betta-next.css
@@ -703,6 +703,11 @@ img.round {
     left: calc(50vw - 6rem) !important;
   }
 }
+@media (max-width: 800px) and (max-width: 800px) {
+  #betta_home-button {
+    display: none;
+  }
+}
 /*-------------------------------------*/
 /*---------------------------------------
 	Footer
