--- a/betta-next.css
+++ b/betta-next.css
@@ -379,6 +379,12 @@ body {
   }
 }
 
+/* Fixes horizontal scrolling on Safari */
+body, html {
+  position: relative;
+  overflow-x: hidden;
+}
+
 main {
   padding: 3rem 2rem;
   overflow-x: hidden;
@@ -1235,7 +1241,6 @@ a.card {
   width: 25.5rem;
   max-width: 100%;
   padding: 0;
-  margin-top: 1rem;
   margin: 1rem;
   border-color: #e0e0e0;
   border-radius: 0.25rem;
@@ -1273,6 +1278,10 @@ a.card .betta_image img {
 }
 
 /* Cover card */
+a.card.cover {
+  margin-bottom: 1rem;
+}
+
 a.card.cover .betta_image img,
 a.card.cover .betta_image {
   border-radius: 0.25rem;
@@ -1552,13 +1561,11 @@ a.card-double .content {
   max-width: calc(100% - 1.5rem);
   margin: 1.25rem 0.75rem 0 0.75rem;
 }
-
 .card.contact .picture {
   width: 25rem;
   max-width: 100%;
   overflow: hidden;
 }
-
 .card.contact .content {
   position: relative;
   width: 16rem;
@@ -1567,15 +1574,29 @@ a.card-double .content {
   z-index: 2;
   background: #f5f5f5;
 }
-
-.dark .card.contact .content {
-  background: #212121;
-}
-
 .card.contact .content p {
   margin: 0;
 }
-
+.card.contact .close {
+  display: none;
+  position: absolute;
+  top: -1rem;
+  left: -1rem;
+  height: 2rem;
+  width: 2rem;
+  border-bottom: none;
+  z-index: 2;
+  padding: 0;
+}
+.card.contact .close .icon img {
+  width: 2rem;
+  height: 2rem;
+  overflow: visible;
+}
+.card.contact .close .icon img img {
+  width: 2rem;
+  height: 2rem;
+}
 .card.contact .phone {
   position: absolute;
   top: 1.25rem;
@@ -1583,7 +1604,6 @@ a.card-double .content {
   border-bottom: none;
   z-index: 1;
 }
-
 .card.contact .email {
   position: absolute;
   top: 1.25rem;
@@ -1591,12 +1611,6 @@ a.card-double .content {
   border-bottom: none;
   z-index: 1;
 }
-
-.card.contact .phone:hover + .phone-number,
-.card.contact .email:hover + .email-address {
-  display: block;
-}
-
 .card.contact .phone-number,
 .card.contact .email-address {
   display: none;
@@ -1608,7 +1622,30 @@ a.card-double .content {
   padding-top: 1.3rem;
   background: #f5f5f5;
 }
+@media (hover: hover) {
+  .card.contact .phone:hover + .phone-number,
+.card.contact .email:hover + .email-address {
+    display: block;
+  }
+  .card.contact .phone-number:hover,
+.card.contact .email-address:hover {
+    display: block;
+  }
+}
+@media (max-width: 800px) {
+  .card.contact .phone {
+    top: 0.5rem;
+    left: -2rem;
+  }
+  .card.contact .email {
+    top: 0.5rem;
+    right: -2rem;
+  }
+}
 
+.dark .card.contact .content {
+  background: #212121;
+}
 .dark .card.contact .phone-number,
 .dark .card.contact .email-address {
   display: none;
@@ -1620,33 +1657,13 @@ a.card-double .content {
   padding-top: 1.3rem;
   background: #212121;
 }
-
-.card.contact .phone-number:hover,
-.card.contact .email-address:hover {
-  display: block;
-}
-
-.card.contact .phone-number:hover + .phone,
-.card.contact .email-address:hover + .email {
-  background-color: #ffffff;
-}
-
-.dark .card.contact .phone-number:hover + .phone,
+@media (hover: hover) {
+  .dark .card.contact .phone-number:hover + .phone,
 .dark .card.contact .email-address:hover + .email {
-  background-color: #121212;
-}
-
-@media (max-width: 800px) {
-  .card.contact .phone {
-    top: 0.5rem;
-    left: -2rem;
-  }
-
-  .card.contact .email {
-    top: 0.5rem;
-    right: -2rem;
+    background-color: #121212;
   }
 }
+
 /*-------------------------------------*/
 /*---------------------------------------
 	Flip Card
